@@ -371,10 +371,6 @@ property-classes=abc.abstractproperty
 
 [TYPECHECK]
 
-# Tells whether missing members accessed in mixin class should be ignored.
-# A class is considered mixin if its name matches the mixin-class-rgx option.
-ignore-mixin-members=yes
-
 # Regex pattern to define which classes are considered mixins if ignore-mixin-
 # members is set to 'yes'
 mixin-class-rgx=.*MixIn
